# SourcetrailPE

./: .clang-tidy  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DOCUMENTATION.md  README.md  run-clang-tidy-fix.sh
.github/workflows/: clang_build.yml  clang_build_window.yml
archive/: .gitignore  CMakeUserPresets.json  upperLowerCase.cpp
cmake/: language_packages.h.in
projects/: Sourcetrail-Linux-System-Clang.srctrlprj  Sourcetrail-Linux-System.srctrlprj  Sourcetrail-Linux-Vcpkg-Directory.srctrlprj  Sourcetrail-Linux-Vcpkg.srctrlprj  Sourcetrail-Windows-Vcpkg-Directory.srctrlprj  Sourcetrail-Windows-Vcpkg.srctrlprj
src/app/: main.cpp
src/lib/: CMakeLists.txt
src/lib/app/: Application.cpp  Application.h
src/lib/data/: NodeKind.cpp  NodeKind.h  NodeType.cpp  NodeTypeSet.cpp  TaskFinishParsing.cpp
src/lib/project/: Project.cpp  Project.h  RefreshInfo.h  SourceGroup.cpp  SourceGroup.h
src/lib/settings/: ApplicationSettings.cpp  ApplicationSettings.h  LanguageType.h  (+4 more)
src/lib_aidkit/: CMakeLists.txt
src/lib_aidkit/aidkit/: thread_shared.cpp  thread_shared.hpp
src/lib_gui/: CMakeLists.txt
src/resources/: CMakeLists.txt  QtResources.cpp  QtResources.h
src/test/: CMakeLists.txt  ConfigManagerTestSuite.cpp  CxxParserTestSuite.cpp  GraphTestSuite.cpp  QtResourcesTestSuite.cpp  RefreshInfoGeneratorTestSuite.cpp  SearchIndexTestSuite.cpp  SourceGroupTestSuite.cpp  StorageTestSuite.cpp  UtilitySourceGroupCxxTestSuite.cpp  UtilityStringTestSuite.cpp  test_main.cpp
src/test_aidkit/: CMakeLists.txt  thread_shared_test.cpp
testing/usages/: Usages.srctrlprj
(+115 files in other folders)
